--- a/hub_server.conf
+++ b/hub_server.conf
@@ -1,4 +1,4 @@
-# Conf file created at 2021-12-26T00:49:51
+# Conf file created at 2021-12-26T13:01:14
 
 eq_conf:
 
@@ -47,7 +47,7 @@ SVR.STORE.AUTO:	1000
 SVR.HOST_NAME:	"machine"
 SVR.PROCESSNAME:	"hub_server"
 SVR.RPC_NUMBER:	610498008
-SVR.STARTTIME:	1640468991
+SVR.STARTTIME:	1640512874
 SVR.LIBINFO:	"21.7.1"
 SVR.LIBDATE:	"Dec 24 19:29"
 SVR.WDADDR:	""
@@ -106,4 +106,27 @@ DEVICE.OFFLINE:	0
 T_ZERO:	7.000000000000000e+02
 SVR.RATE:	10  0  0  0
 SVR.UPDATE_PERIOD:	1.000000000000000e+01
+}
+eq_fct_name: 	"EXAMPLE"
+eq_fct_type: 	100
+{
+NAME:	"EXAMPLE"
+STS:	0x0
+STS.ERROR:	0
+STS.NEWERROR:	0
+STS.ERRORMASK:	0
+STS.ONLINE:	0
+ERROR.STR:	0 0 0 0 "init"
+ERROR.TXT:	""
+SYS_MASK:	-2147483648
+FCT_PANEL:	"commonFCT_CODE_100.xml"
+FCT_INCLUDE:	"commonFCT_CODE_100_include.xml"
+X_POS:	0.000000e+00
+Z_POS:	0.000000e+00
+Z_POS.STRING:	""
+DEVICE.INFO:	0 0 0 0 "None"
+LOG.REGEX:	""
+MESSAGE:	""
+LAST_UPDATE:	0  0  0  0
+LAST_USR1:	0  0  0  0
 }
